# tain

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  supervise_agent.py  tain  tain.cmd
.github/: PULL_REQUEST_TEMPLATE.md
docs/: EVOLUTION.md  SAFETY.md  architecture.md  optimization-backlog.md  quickstart.md  runtime.md
scripts/: demo_evolution.py
tain_agent/: __init__.py  compat.py  decision_log.py  storage_registry.py
tests/: test_acp.py  test_adapters.py  test_agent_auto_goal.py  test_agent_bundle.py  test_agent_runtime.py  test_autonomous_evolution.py  test_background_manager.py  test_capability.py  test_collaboration_plugin.py  test_config.py  test_conversation.py  test_daemon.py  test_demo_evolution.py  test_dependency_manager.py  test_dialogue.py  test_drives.py  test_evaluation_plugin.py  test_evolution_emergence_verifier.py  test_evolution_lineage.py  test_evolution_pipeline.py  test_exporter.py  test_forge_cycle.py  test_forge_integration.py  test_forge_sandbox.py  test_goal.py  test_ide_kernel.py  test_identity_plugin.py  test_improvement_loop.py  test_integration.py  test_integration_new.py  test_integration_package.py  test_kernel.py  test_knowledge_plugin.py  test_llm_logger.py  test_llm_parser.py  test_llm_stream_parser.py  test_mcp_loader.py  test_mcp_server.py  test_memory_plugin.py  test_message_bus.py  (+22 more)
tools/: cleanup_workspaces.py
webui/: agent_cache.py  app.py  auth.py  conversation_store.py  data.py  dialogue.py  (+7 more)
(+223 files in other folders)
